@@ -104,12 +104,7 @@ version.org.assertj..assertj-core=3.22.0
 ##                    # available=3.23.0
 ##                    # available=3.23.1
 
-## DONOT alter the version of groovy here because we need the compatible
-## version with what spock needs
-version.org.codehaus.groovy..groovy-all=2.5.4
-##                          # available=3.0.11
-##                          # available=3.0.12
-##                          # available=3.0.13
+version.org.codehaus.groovy..groovy-all=3.0.13
 
 version.org.gridkit.jvmtool..heaplib=0.2
 
@@ -128,31 +123,6 @@ version.org.ops4j.pax.exam..pax-exam-link-mvn=4.13.5
 version.org.ops4j.pax.exam..pax-exam-testng=4.13.5
 
 version.org.ops4j.pax.url..pax-url-aether=2.6.12
-
-## DONOT upgrade the version to the 2.x series because spock 2.x series
-## starts expecting adherance the JUnit5 engine and we are NOT
-## planning to support running JUnit5 tests in TestNG and so we don't have
-## JUnit5 compliant runner
-version.org.spockframework..spock-core=1.3-groovy-2.5
-##                         # available=2.1-M1-groovy-2.5
-##                         # available=2.1-M1-groovy-3.0
-##                         # available=2.1-M2-groovy-2.5
-##                         # available=2.1-M2-groovy-3.0
-##                         # available=2.2-groovy-2.5
-##                         # available=2.2-groovy-3.0
-##                         # available=2.2-groovy-4.0
-##                         # available=2.2-M1-groovy-2.5
-##                         # available=2.2-M1-groovy-3.0
-##                         # available=2.2-M1-groovy-4.0
-##                         # available=2.2-M2-groovy-2.5
-##                         # available=2.2-M2-groovy-3.0
-##                         # available=2.2-M2-groovy-4.0
-##                         # available=2.2-M3-groovy-2.5
-##                         # available=2.2-M3-groovy-3.0
-##                         # available=2.2-M3-groovy-4.0
-##                         # available=2.3-groovy-2.5
-##                         # available=2.3-groovy-3.0
-##                         # available=2.3-groovy-4.0
 
 version.org.webjars..jquery=3.6.1
 
